# contourpp

./: .gitignore  CMakeLists.txt  Readme.md
cmake/Modules/: FindHidapi.cmake
include/: contourpp_driver.hpp  contourpp_optionparser.hpp  hid_commands.hpp  optionparser.h
src/: CMakeLists.txt  contourpp.cpp  contourpp_driver.cpp  hid_commands.cpp
